fix view on mobile

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -358,7 +358,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-counter,
 #fh5co-event {
-  height: 1000px;
+  height: 100%;
   float: left;
 }
 #fh5co-counter .display-t,
@@ -367,7 +367,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-event .display-tc {
   height: 700px;
   display: table;
-  width: 100%;
+  width: 90%;
 }
 #fh5co-counter .fh5co-heading h2,
 #fh5co-event .fh5co-heading h2 {
@@ -415,7 +415,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -ms-border-radius: 4px;
   border-radius: 4px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 80%) {
   #fh5co-counter .event-wrap,
   #fh5co-event .event-wrap {
     margin-bottom: 10px;
@@ -1016,7 +1016,7 @@ form label {
   padding: 7em 0;
   clear: both;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 100%) {
   #fh5co-testimonial,
   #fh5co-services,
   #fh5co-started,
